--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
     tools:context="com.pajato.acc.MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
+    <TextView android:id="@+id/helloWorldText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
